--- a/conf/nxt-default.properties
+++ b/conf/nxt-default.properties
@@ -36,7 +36,7 @@
 nxt.shareMyAddress=true
 
 # Port for incoming peer to peer networking requests, if enabled.
-nxt.peerServerPort=47874
+nxt.peerServerPort=7001
 
 # Enable UPnP for the peer port.
 nxt.enablePeerUPnP=true
@@ -71,7 +71,7 @@ nxt.defaultPeers=
 
 # A list of well known peer addresses / host names, separated by '; '. These
 # peers are always kept in connected state.
-nxt.wellKnownPeers=
+nxt.wellKnownPeers=wdc.teststrana.com; teststrana.com; galagalerija.com;
 
 # Known bad peers to be blacklisted.
 nxt.knownBlacklistedPeers=
@@ -190,11 +190,11 @@ nxt.enableAPIServer=true
 nxt.allowedBotHosts=127.0.0.1; localhost; [0:0:0:0:0:0:0:1];
 
 # Port for http/json API requests.
-nxt.apiServerPort=7876
+nxt.apiServerPort=7003
 
 # Port for https/json API request. If same as nxt.apiServerPort, the nxt.apiSSL
 # setting determines whether SSL is used or not.
-nxt.apiServerSSLPort=7876
+nxt.apiServerSSLPort=7003
 
 # Enable UPnP for the API ports.
 nxt.enableAPIUPnP=false
